# hdu2026_os_exp

./: .editorconfig  .gitignore  Cargo.toml  README.md
assets/hdu-report-typst/template/: fonts.typ
exp_1/: 0001-HDU-EXP-implement-syscall-1024-csm_hostname.patch  bib.bib  report.typ
exp_3/: bib.bib  build.zig  build.zig.zon  report.typ
exp_3/assets/: star-topo.drawio
exp_3/mychat/: common.zig  fifo.zig  main.zig  mq.zig  p2p.zig  shmem.zig
exp_3/myshell/: cmd.zig  main.zig  parse.zig
exp_3/tests/: common.sh  run.sh  test_mychat_fifo_broadcast.sh  test_mychat_fifo_join_leave.sh  test_mychat_fifo_stress_concurrent_send.sh  test_mychat_fifo_zombie.sh  test_mychat_mq_broadcast.sh  test_mychat_mq_join_leave.sh  test_mychat_mq_stress_concurrent_send.sh  test_mychat_mq_zombie.sh  test_mychat_p2p_bidirectional.sh  test_mychat_p2p_single_client.sh  test_mychat_shmem_broadcast.sh  test_mychat_shmem_join_leave.sh  test_mychat_shmem_stress_concurrent_send.sh  test_mychat_shmem_zombie.sh
exp_5/: bib.bib  report.typ
exp_5/assets/: disk.drawio  fcb_layout.drawio  phys_blocks.drawio
exp_5/mkfs_myfs/: Cargo.toml
exp_5/mkfs_myfs/src/: main.rs
exp_5/myfs/: Cargo.toml
exp_5/myfs/src/: dev.rs  fat.rs  fs.rs  lib.rs  main.rs  name.rs  util.rs
exp_5/myfs_shell/: Cargo.toml
exp_5/myfs_shell/src/: main.rs
