[package]
name = "myfs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 AND CC-BY-SA-4.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "myfs"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = "0.4.44"
derive_more = { version = "2.1.1", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
    "into"
] }
log = "0.4.29"
thiserror = "2.0.18"
